# binfreeze

./: .gitignore  LICENSE  README.md  meson.build
include/: binfreeze.h  config.h.in  rules.h
scripts/: populate_config.sh
src/: binfreeze.c  main.c  rules.c
